--- a/WPF/Mob/CHICKEN.xaml
+++ b/WPF/Mob/CHICKEN.xaml
@@ -6,13 +6,17 @@
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
              mc:Ignorable="d" Height="290" Width="290">
     <Grid>
-        <Label Content="鸡设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="90"/>
+        <Label Content="鸡设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="年龄" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Margin="250,45,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        
         <CheckBox Content="是否为鸡骑士" HorizontalAlignment="Left" Height="15" Margin="10,25,0,0" VerticalAlignment="Top"
-                  IsChecked="{Binding obj.Jockey}"/>
-        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,40,0,0" VerticalAlignment="Top" Width="40"/>
-        <Slider HorizontalAlignment="Left" Height="25" Margin="50,45,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
-        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,45,0,0" VerticalAlignment="Top" Width="40"/>
-        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top"
-                  IsChecked="{Binding obj.AgeLock}"/>
+                  IsChecked="{Binding obj.Jockey}" Style="{StaticResource Check}"/>
+        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"
+                  IsChecked="{Binding obj.AgeLock}" Style="{StaticResource Check}"/>
+
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,45,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" 
+                LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1" Style="{StaticResource Slider}"/>
+        
     </Grid>
 </UserControl>
