--- a/WPF/Mob/OCELOT.xaml
+++ b/WPF/Mob/OCELOT.xaml
@@ -6,18 +6,24 @@
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
              mc:Ignorable="d" Height="300" Width="290">
     <Grid>
-        <Label Content="豹猫设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="90"/>
-        <Label Content="豹猫种类" HorizontalAlignment="Left" Height="25" Margin="10,25,0,0" VerticalAlignment="Top" Width="60"/>
+        <Label Content="豹猫设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="豹猫种类" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="年龄" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Margin="250,55,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+
         <ComboBox HorizontalAlignment="Left" Height="20" Margin="70,30,0,0" VerticalAlignment="Top" Width="135"
-                  Name="Type" Text="{Binding obj.Ocelot}"/>
-        <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="210,30,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click"/>
-        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,55,0,0" VerticalAlignment="Top"/>
-        <Slider HorizontalAlignment="Left" Height="25" Margin="50,59,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
+                  Name="Type" Text="{Binding obj.Ocelot}" Style="{StaticResource ComboBoxStyle}"/>
+        
+        <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="210,30,0,0" VerticalAlignment="Top" Width="70" 
+                Click="Button_Click" Style="{StaticResource Button}"/>
+        
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,59,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" 
+                LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
+
         <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top"
-            IsChecked="{Binding obj.AgeLock}"/>
-        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,55,0,0" VerticalAlignment="Top" Width="40"/>
+            IsChecked="{Binding obj.AgeLock}" Style="{StaticResource Check}"/>
         <CheckBox Content="是否能被驯服" HorizontalAlignment="Left" Margin="90,89,0,0" VerticalAlignment="Top"
-            IsChecked="{Binding obj.Tameable}"/>
+            IsChecked="{Binding obj.Tameable}" Style="{StaticResource Check}"/>
 
     </Grid>
 </UserControl>
