--- a/WPF/Mob/RABBIT.xaml
+++ b/WPF/Mob/RABBIT.xaml
@@ -6,18 +6,26 @@
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
              mc:Ignorable="d" Height="300" Width="290">
     <Grid>
-        <Label Content="兔子设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="90"/>
-        <Label Content="兔子种类" HorizontalAlignment="Left" Height="25" Margin="10,25,0,0" VerticalAlignment="Top" Width="60"/>
-        <ComboBox HorizontalAlignment="Left" Height="20" Margin="70,30,0,0" VerticalAlignment="Top" Width="145"
-                  Name="Type" Text="{Binding obj.RabbitType}"/>
-        <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="220,30,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"/>
-        <CheckBox Content="是否为小兔子" HorizontalAlignment="Left" Height="15" Margin="10,55,0,0" VerticalAlignment="Top" Width="110"
-                  IsChecked="{Binding obj.Baby}"/>
-        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,75,0,0" VerticalAlignment="Top"/>
-        <Slider HorizontalAlignment="Left" Height="25" Margin="50,79,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
-        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,109,0,0" VerticalAlignment="Top"
-            IsChecked="{Binding obj.AgeLock}"/>
-        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,75,0,0" VerticalAlignment="Top" Width="40"/>
+        <Label Content="兔子设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="兔子种类" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="年龄" HorizontalAlignment="Left" Margin="11,73,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Margin="250,75,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        
+        <ComboBox HorizontalAlignment="Left" Height="20" Margin="70,28,0,0" VerticalAlignment="Top" Width="145"
+                  Name="Type" Text="{Binding obj.RabbitType}" Style="{StaticResource ComboBoxStyle}"/>
+        
+        <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="220,28,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"
+                Style="{StaticResource Button}"/>
+        
+        <CheckBox Content="是否为小兔子" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top"
+                  IsChecked="{Binding obj.Baby}" Style="{StaticResource Check}"/>
+        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="11,103,0,0" VerticalAlignment="Top"
+            IsChecked="{Binding obj.AgeLock}" Style="{StaticResource Check}"/>
+        
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,75,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" 
+                LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1" Style="{StaticResource Slider}"/>
+        
+        
 
     </Grid>
 </UserControl>
