--- a/WPF/Mob/SNOWMAN.xaml
+++ b/WPF/Mob/SNOWMAN.xaml
@@ -6,9 +6,10 @@
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
              mc:Ignorable="d" Height="300" Width="290">
     <Grid>
-        <Label Content="雪人设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="90"/>
-        <CheckBox Content="是否阻止在脚下造雪" HorizontalAlignment="Left" Height="20" Margin="10,25,0,0" VerticalAlignment="Top" Width="135"
-                  IsChecked="{Binding obj.PreventSnowFormation}"/>
+        <Label Content="雪人设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        
+        <CheckBox Content="是否阻止在脚下造雪" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top"
+                  IsChecked="{Binding obj.PreventSnowFormation}" Style="{StaticResource Check}"/>
 
     </Grid>
 </UserControl>
