--- a/WPF/Mob/ZOMBIE_VILLAGER.xaml
+++ b/WPF/Mob/ZOMBIE_VILLAGER.xaml
@@ -6,15 +6,20 @@
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
              mc:Ignorable="d" Height="300" Width="290">
     <Grid>
-        <Label Content="僵尸村民设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top"/>
-        <Label Content="村民职业" HorizontalAlignment="Left" Height="25" Margin="10,45,0,0" VerticalAlignment="Top" Width="60"/>
-        <ComboBox HorizontalAlignment="Left" Height="20" Margin="70,50,0,0" VerticalAlignment="Top" Width="135"
-            Name="Type" Text="{Binding obj.Profession}"/>
-        <Button Content="随机职业" HorizontalAlignment="Left" Height="20" Margin="210,50,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click"/>
-        <Label Content="加强伤害几率" HorizontalAlignment="Left" Height="25" Margin="10,20,0,0" VerticalAlignment="Top"/>
-        <Slider HorizontalAlignment="Left" Margin="92,25,0,0" VerticalAlignment="Top" Width="153" Maximum="1" LargeChange="0.1" TickFrequency="0.1"
-            Value="{Binding obj.ReinforcementsChance}"/>
-        <Label Content="{Binding obj.ReinforcementsChance}" HorizontalAlignment="Left" Height="25" Margin="250,20,0,0" VerticalAlignment="Top" Width="40"/>
+        <Label Content="僵尸村民设置" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="村民职业" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="加强伤害几率" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="{Binding obj.ReinforcementsChance}" HorizontalAlignment="Left" Margin="250,25,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+
+        <ComboBox HorizontalAlignment="Left" Height="20" Margin="73,53,0,0" VerticalAlignment="Top" Width="135"
+            Name="Type" Text="{Binding obj.Profession}" Style="{StaticResource ComboBoxStyle}"/>
+
+        <Button Content="随机职业" HorizontalAlignment="Left" Height="20" Margin="213,53,0,0" VerticalAlignment="Top" Width="70" 
+                Click="Button_Click" Style="{StaticResource Button}"/>
+
+        <Slider HorizontalAlignment="Left" Margin="92,28,0,0" VerticalAlignment="Top" Width="153" Maximum="1" LargeChange="0.1" TickFrequency="0.1"
+            Value="{Binding obj.ReinforcementsChance}"  Style="{StaticResource Slider}"/>
+
 
     </Grid>
 </UserControl>
